testdata/golden/hir_borrow/invalid/spawn_escape.hir
warning SEM3004 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:5 declaration of 't' shadows previous binding
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:27 cannot send 'r' to a task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=1407) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L2815(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=1408) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let t: type#709 = spawn use_ref(r): type#709: type#709
  await(t): type#1496
  return
}

borrow edges:
  L2817(r) (&) borrows L2816(x) at 0:87-89 scope=S5
events:
  borrow_start L2817(r) -> L2816(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L2817(r) -> L2816(x) at 0:117-118 scope=S5 note="B1"
  move L2818(t) at 0:125-126 scope=S5
  borrow_end L2817(r) -> L2816(x) scope=S5 note="scope_end B1"
move plan:
  L2816(x): MoveCopy (copy type)
  L2817(r): MoveForbidden (task escape)
  L2818(t): MoveNeedsDrop (non-copy (drop))

